Changes in Act

[main changes only -- see http://svnweb.mongueurs.net/Act/log/branches/stable for full list]

2007/07/30 r1569 Reorganizing The Fine Manual

2007/07/27 r1560 support for optional compiled templates
           r1559 change password in two steps replaces reset password

2007/07/11 r1542 change password page

2007/07/09 r1508 wiki [user:nick_name], [user:first_name last_name] links
           r1505 new payment means FREE

2007/07/02 r1482 Online payment: store payment type and price name
           r1481 track database schema changes
           r1478 allow donation in user payment
           r1477 let treasurer generate invoices

2007/06/11 r1444 track management

2007/06/04 r1441 export talks to CSV format

2007/05/29 r1434 talk target audience
           r1433 news

2007/05/08 r1395 optional talk accept notification

2007/05/02 r1386 add a fourth room color

2007/04/24 r1371 don't mangle pm_group user input
                 handle multiple pm_group per user in search

2007/04/19 r1368 add support for glob-like * in user search

2007/04/16 r1359 iCal import and export enhancements

2007/04/10 r1330 apply site policy to configuration

2007/04/07 r1312 paymentreport enhancements
           r1311 wiki "delete page" feature

2007/04/02 r1284 user photo normalization to jpg/png, 320x200
           r1281 Convert the application to use Unicode everywhere
           r1279 'remember me' check box in login
           r1278 move all core translations to .po files

2007/03/18 r1181 move price translations to act.ini
                 currency is global, not per price
                 remove table "prices", no longer used
                 move notify_bcc from [payment] to [payment_type_XXX]
                 allow notify_bcc to be a comma separated list

2007/03/14 r1176 EARLYBIRD price type, English only
           r1175 add support for user:id in talk abstracts and wiki
           r1173 handle multiple monger groups per user in statistics