@@ -9,13 +9,6 @@ package MyView;
 use base 'Pod::POM::View::HTML';
 
 my $prefix = 'Act::';
-my %meta_sections = map { $_ => 1 } qw(NAME);
-
-sub is_meta_section
-{
-    my ($self, $name) = @_;
-    return exists $meta_sections{$name};
-}
 
 sub page_depth
 {
@@ -30,21 +23,6 @@ sub view_pod
 {
     my ($self, $pod) = @_;
     return $pod->content->present($self);
-}
-sub view_head1
-{
-    my ($self, $head1) = @_;
-    my $title = $head1->title->present($self);
-
-    if ($meta_sections{$title}) {
-        return '';
-    }
-    my $html = $head1->content->present($self);
-    if ($title eq 'DESCRIPTION') {
-        return $html;
-    }
-    return "<h1>$title</h1>\n"
-           . $head1->content->present($self);
 }
 sub view_seq_link_transform_path
 {
@@ -69,7 +47,6 @@ use File::Spec::Functions qw(catfile);
 use FindBin               qw($Bin);
 use Getopt::Long          qw(GetOptions);
 use Pod::POM              qw();
-use Pod::POM::View::Text  qw();
 use Pod::Usage            qw(pod2usage);
 use Template              qw();
 
@@ -94,7 +71,6 @@ my $destdir = shift or pod2usage("You must specify a destination directory!");
 # create POD parser and view and template objects
 my $parser = Pod::POM->new(warn => 1);
 my $view_html = MyView->new;
-my $view_text = Pod::POM::View::Text->new;
 my $template = Template->new(
    INCLUDE_PATH => catfile($acthome, qw(templates manual)),
    UNICODE  => 1,
@@ -147,15 +123,13 @@ for my $pathname (@files) {
     my $dir = dirname($outputfile);
     -d $dir or mkpath($dir);
 
-    # retrieve meta data
-    my %meta;
-    for my $head1 ($pom->head1()) {
-        if (MyView->is_meta_section($head1->title())) {
-            my $text = $head1->content->present($view_text);
-            $text =~ s/\s+$//;
-            $meta{ $head1->title() } = $text;
-        }
-    }
+    # retrieve title
+    (my $title = $file) =~ s|/|::|g;
+    $title =~ s/\.pod//;
+    $title = "Act::$title";
+    (my $head1) = $pom->head1();
+    $title = join ' - ', $title, $head1->title;
+
     # process file through our page template
     open my $fh, '>:encoding(UTF-8)', $outputfile
         or die "can't open $outputfile for writing: $!\n";
@@ -163,7 +137,7 @@ for my $pathname (@files) {
         'page',
         {
           content => $html,
-          meta    => \%meta,
+          title   => $title,
           baseurl => $baseurl,
         },
         $fh);
