@@ -1,10 +1,4 @@
-=head1 NAME
-
-Act::Manual::Organizer::Layout - The layout of a conference repository
-
-=head1 DESCRIPTION
-
-This manual describes the layout of a conference repository.
+=head1 The layout of a conference repository
 
 An Act-enabled conference web site uses two subdirectories:
 
