@@ -1,8 +1,4 @@
-=head1 NAME
-
-Act::Manual::Provider::Installation - Installing Act on your system
-
-=head1 Installing Act
+=head1 Installing Act on your system
 
 Install (or svn checkout) Act in a directory. In this document we'll
 use /home/act, and refer to it as Act's home directory.
